# codex-workbench.nvim

./: .gitignore  .luacheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  claude-code-review.yml  claude.yml  release.yml
doc/: codex-workbench.txt
lua/codex_workbench/: bridge.lua  commands.lua  config.lua  context.lua  error_codes.lua  health.lua  init.lua  log.lua
lua/codex_workbench/ui/: approval.lua  error_actions.lua  error_prompt.lua  highlights.lua  output.lua  output_winbar.lua  progress.lua  review.lua  statusline.lua  thread_picker.lua
lua/codex_workbench/ui/chat/: buffer.lua  cmp_source.lua  history.lua  init.lua  prompt.lua  render.lua
lua/codex_workbench/ui/inline/: init.lua  keymap.lua  render.lua  state.lua
lua/codex_workbench/ui/palette/: backends.lua  history.lua  init.lua  templates.lua
lua/codex_workbench/ui/review/: highlights.lua  init.lua  legacy.lua  panes.lua  parse.lua  state.lua  tree.lua  winbar.lua
plugin/: codex_workbench.lua
rust/: Cargo.toml
rust/crates/bridge/: Cargo.toml
rust/crates/bridge/src/: main.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: app_server.rs  errors.rs  git.rs  lib.rs  manager.rs  review.rs  shadow.rs  state.rs
rust/crates/core/tests/: manager_integration.rs
rust/crates/protocol/: Cargo.toml
rust/crates/protocol/src/: error.rs  lib.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_error_classify.rs  fuzz_files_from_patch.rs  fuzz_patch_for_scope.rs
scripts/: install_binary.sh  release_checks.sh  sync_protocol.sh
tests/: minimal_init.lua
tests/nvim/: smoke.lua
tests/spec/: bridge_spec.lua  chat_buffer_spec.lua  chat_cmp_source_spec.lua  commands_spec.lua  context_spec.lua  error_actions_spec.lua  error_codes_spec.lua  error_prompt_spec.lua  highlights_spec.lua  inline_fallback_spec.lua  inline_keymap_spec.lua  inline_render_spec.lua  inline_state_spec.lua  palette_backends_spec.lua  palette_history_spec.lua  palette_spec.lua  palette_templates_spec.lua  progress_spec.lua  review_diffview_spec.lua  review_signs_spec.lua  review_state_spec.lua  review_ui_spec.lua  thread_picker_spec.lua  winbar_spec.lua
