[package]
name = "codex-workbench-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
codex-workbench-core = { path = "../core" }
codex-workbench-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
