[package]
name = "codex-workbench-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
codex-workbench-protocol = { path = "../protocol" }
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
codex-workbench-protocol = { path = "../protocol" }
proptest.workspace = true
tempfile.workspace = true

