[package]
name = "codex-workbench-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["codex"]
# Compiles the Codex app-server client. Disable to ship a backend-neutral
# bridge (e.g. for the codecompanion-shadow-review extension where edits arrive
# from external tools rather than from a Codex turn). See issue #44.
codex = []

[dependencies]
anyhow.workspace = true
codex-workbench-protocol = { path = "../protocol" }
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
codex-workbench-protocol = { path = "../protocol" }
proptest.workspace = true

